--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "Extern/CommonLibSSE"]
-	path = Extern/CommonLibSSE
-	url = https://github.com/powerof3/CommonLibSSE
-[submodule "Extern/CommonLibNG"]
-	path = Extern/CommonLibNG
-	url = https://github.com/alandtse/CommonLibVR
-	branch = ng
+[submodule "Extern/CommonlibSSE"]
+	path = Extern/CommonlibSSE
+	url = https://github.com/SeaSparrowOG/CommonLibSSE
